@@ -4,7 +4,7 @@
 // Modified by Garth N. Wells, 2008.
 //
 // First added:  2006-05-08
-// Last changed: 2009-09-08
+// Last changed: 2010-04-29
 
 #ifndef __MESH_GEOMETRY_H
 #define __MESH_GEOMETRY_H
@@ -128,6 +128,9 @@ namespace dolfin
     std::string str(bool verbose) const;
 
   private:
+
+    // Friends
+    friend class BinaryFile;
 
     // Euclidean dimension
     uint _dim;
