@@ -1,3 +1,4 @@
+ - Read/write meshes in binary format
  - Add parameter "use_ident" in DirichletBC
  - Issue error by default when solvers don't converge (parameter "error_on_convergence")
  - Add option to print matrix/vector for a VariationalProblem
